--- a/hello-world/templates/configmap.yaml
+++ b/hello-world/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-   name: {{ .Release.Name }}-configmap
+   name: helloworld-configmap
 data:
    myvalue: "Hello World"
 
